[gd_scene load_steps=18 format=4 uid="uid://dwjidn2e36hua"]

[ext_resource type="Script" path="res://src/main/main.gd" id="1_nanye"]
[ext_resource type="PackedScene" uid="uid://oilqnix2sn8h" path="res://src/main/player.tscn" id="1_tolmm"]
[ext_resource type="Script" path="res://src/main/cloud_layer.gd" id="2_2tnbl"]
[ext_resource type="TileSet" uid="uid://dxefvk7rqoljf" path="res://assets/block_tile_set.tres" id="2_h45d6"]
[ext_resource type="FontFile" uid="uid://bgd7dbp83hddp" path="res://assets/fonts/BitPotionExt.ttf" id="4_2bdr6"]
[ext_resource type="Script" path="res://src/main/ui/time_left_label.gd" id="4_61toc"]
[ext_resource type="Texture2D" uid="uid://r5ehy6c4gt4k" path="res://assets/images/sun.png" id="4_si4jm"]
[ext_resource type="Script" path="res://src/main/ui/score_label.gd" id="5_ogntn"]
[ext_resource type="Script" path="res://src/main/ui/game_timer.gd" id="6_6u3n4"]
[ext_resource type="Script" path="res://src/main/ui/high_score_label.gd" id="6_uqvrq"]
[ext_resource type="Script" path="res://src/main/ui/play_button.gd" id="8_0emv5"]
[ext_resource type="Script" path="res://src/main/ui/legal_text.gd" id="8_wbmt4"]
[ext_resource type="AudioStream" uid="uid://bj61b7fx2dw8" path="res://assets/sfx/ui_hover.wav" id="11_v3mo6"]
[ext_resource type="Script" path="res://src/main/ui/music_label.gd" id="12_0efet"]
[ext_resource type="Script" path="res://src/main/auto_respawn.gd" id="13_v6o86"]
[ext_resource type="Script" path="res://src/main/sfx_label.gd" id="15_k0hlb"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lrd1q"]
random_pitch = 2.0
streams_count = 1
stream_0/stream = ExtResource("11_v3mo6")

[node name="Main" type="Node2D"]
process_mode = 1
texture_filter = 1
script = ExtResource("1_nanye")
metadata/_edit_lock_ = true
metadata/_edit_vertical_guides_ = [800.0, 900.0, 700.0]
metadata/_edit_horizontal_guides_ = [525.0, 625.0]

[node name="CloudLayer" type="Node2D" parent="."]
script = ExtResource("2_2tnbl")

[node name="SunLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Sun" type="Sprite2D" parent="SunLayer"]
position = Vector2(53, 84)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_si4jm")

[node name="Notifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1150, -150)
scale = Vector2(16, 16)
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("1_tolmm")]
position = Vector2(29, -29)
collision_mask = 3

[node name="BlockLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAP//AQAAAAAAAAAAAP7/AQAAAAAAAAAAAP3/AQAAAAAAAAAAAPz/AQAAAAAAAAAAAPv/AQAAAAAAAAAAAPr/AQAAAAAAAAAAAPn/AQAAAAAAAAAAAPj/AQAAAAAAAAAAAPf/AQAAAAAAAAAAAPb/AQAAAAAAAAAAAPX/AQAAAAAAAAAAAPT/AQAAAAAAAAAAAPP/AQAAAAAAAAABAP//AQAAAAAAAAA=")
tile_set = ExtResource("2_h45d6")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
process_mode = 3
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1.0
offset_bottom = 1.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Labels" type="HBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 49.0
metadata/_edit_lock_ = true

[node name="TimeLeft" type="RichTextLabel" parent="CanvasLayer/UI/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("4_2bdr6")
theme_override_font_sizes/normal_font_size = 48
text = "TIME: 20.0"
script = ExtResource("4_61toc")

[node name="GameTimer" type="Timer" parent="CanvasLayer/UI/Labels/TimeLeft"]
process_callback = 0
wait_time = 20.0
one_shot = true
script = ExtResource("6_6u3n4")

[node name="Score" type="RichTextLabel" parent="CanvasLayer/UI/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("4_2bdr6")
theme_override_font_sizes/normal_font_size = 48
text = "SCORE: 0"
script = ExtResource("5_ogntn")

[node name="HighScore" type="RichTextLabel" parent="CanvasLayer/UI/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("4_2bdr6")
theme_override_font_sizes/normal_font_size = 48
text = "HIGH SCORE: 0"
script = ExtResource("6_uqvrq")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 380.0
offset_top = 80.0
offset_right = 1200.0
offset_bottom = 650.0
color = Color(0, 0, 0, 1)

[node name="HoverPlayer" type="AudioStreamPlayer" parent="CanvasLayer/UI/ColorRect"]
stream = SubResource("AudioStreamRandomizer_lrd1q")
bus = &"SFX"

[node name="Container" type="HBoxContainer" parent="CanvasLayer/UI/ColorRect"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 400.0

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/UI/ColorRect/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Play" type="Button" parent="CanvasLayer/UI/ColorRect/Container/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_2bdr6")
theme_override_font_sizes/font_size = 128
text = "PLAY"
script = ExtResource("8_0emv5")

[node name="Legal" type="Button" parent="CanvasLayer/UI/ColorRect/Container/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_2bdr6")
theme_override_font_sizes/font_size = 128
text = "LEGAL"

[node name="Options" type="VBoxContainer" parent="CanvasLayer/UI/ColorRect/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AutoRespawn" type="CheckButton" parent="CanvasLayer/UI/ColorRect/Container/Options"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_2bdr6")
theme_override_font_sizes/font_size = 48
text = "Automatic Respawn"
script = ExtResource("13_v6o86")

[node name="MusicLabel" type="RichTextLabel" parent="CanvasLayer/UI/ColorRect/Container/Options"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/normal_font = ExtResource("4_2bdr6")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]Music Volume - 50"
script = ExtResource("12_0efet")

[node name="Music" type="HSlider" parent="CanvasLayer/UI/ColorRect/Container/Options"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="SFXLabel" type="RichTextLabel" parent="CanvasLayer/UI/ColorRect/Container/Options"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/normal_font = ExtResource("4_2bdr6")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]SFX Volume - 50"
script = ExtResource("15_k0hlb")

[node name="SFX" type="HSlider" parent="CanvasLayer/UI/ColorRect/Container/Options"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Title" type="RichTextLabel" parent="CanvasLayer/UI/ColorRect"]
layout_mode = 0
offset_top = 439.0
offset_right = 820.0
offset_bottom = 550.0
theme_override_fonts/normal_font = ExtResource("4_2bdr6")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]I DON'T KNOW THE TITLE YET"

[node name="LegalLabel" type="RichTextLabel" parent="CanvasLayer/UI/ColorRect"]
visible = false
layout_mode = 0
offset_right = 800.0
offset_bottom = 400.0
theme_override_fonts/normal_font = ExtResource("4_2bdr6")
theme_override_font_sizes/normal_font_size = 32
script = ExtResource("8_wbmt4")

[node name="CloseButton" type="Button" parent="CanvasLayer/UI/ColorRect"]
visible = false
layout_mode = 0
offset_left = 300.0
offset_top = 425.0
offset_right = 500.0
offset_bottom = 525.0
theme_override_fonts/font = ExtResource("4_2bdr6")
theme_override_font_sizes/font_size = 64
text = "CLOSE"

[connection signal="request_pause" from="." to="CanvasLayer/UI/ColorRect" method="show"]
[connection signal="request_pause" from="." to="CanvasLayer/UI/Labels/TimeLeft/GameTimer" method="set_paused" binds= [true]]
[connection signal="screen_entered" from="Notifier" to="." method="_generate_next_fort"]
[connection signal="block_distance" from="Player" to="CanvasLayer/UI/Labels/Score" method="set_score"]
[connection signal="timeout" from="CanvasLayer/UI/Labels/TimeLeft/GameTimer" to="Player" method="die"]
[connection signal="mouse_entered" from="CanvasLayer/UI/ColorRect/Container/Buttons/Play" to="CanvasLayer/UI/ColorRect/HoverPlayer" method="play"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/Container/Buttons/Play" to="CanvasLayer/UI/ColorRect" method="hide"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/Container/Buttons/Play" to="CanvasLayer/UI/Labels/TimeLeft/GameTimer" method="set_paused" binds= [false]]
[connection signal="mouse_entered" from="CanvasLayer/UI/ColorRect/Container/Buttons/Legal" to="CanvasLayer/UI/ColorRect/HoverPlayer" method="play"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/Container/Buttons/Legal" to="CanvasLayer/UI/ColorRect/Container" method="hide"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/Container/Buttons/Legal" to="CanvasLayer/UI/ColorRect/Title" method="hide"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/Container/Buttons/Legal" to="CanvasLayer/UI/ColorRect/LegalLabel" method="show"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/Container/Buttons/Legal" to="CanvasLayer/UI/ColorRect/CloseButton" method="show"]
[connection signal="mouse_entered" from="CanvasLayer/UI/ColorRect/Container/Options/AutoRespawn" to="CanvasLayer/UI/ColorRect/HoverPlayer" method="play"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/Container/Options/AutoRespawn" to="CanvasLayer/UI/ColorRect/Container/Options/AutoRespawn" method="_on_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/UI/ColorRect/Container/Options/Music" to="CanvasLayer/UI/ColorRect/HoverPlayer" method="play"]
[connection signal="value_changed" from="CanvasLayer/UI/ColorRect/Container/Options/Music" to="CanvasLayer/UI/ColorRect/Container/Options/MusicLabel" method="_change_text"]
[connection signal="mouse_entered" from="CanvasLayer/UI/ColorRect/Container/Options/SFX" to="CanvasLayer/UI/ColorRect/HoverPlayer" method="play"]
[connection signal="value_changed" from="CanvasLayer/UI/ColorRect/Container/Options/SFX" to="CanvasLayer/UI/ColorRect/Container/Options/SFXLabel" method="_change_text"]
[connection signal="mouse_entered" from="CanvasLayer/UI/ColorRect/CloseButton" to="CanvasLayer/UI/ColorRect/HoverPlayer" method="play"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/CloseButton" to="CanvasLayer/UI/ColorRect/Container" method="show"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/CloseButton" to="CanvasLayer/UI/ColorRect/Title" method="show"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/CloseButton" to="CanvasLayer/UI/ColorRect/LegalLabel" method="hide"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/CloseButton" to="CanvasLayer/UI/ColorRect/CloseButton" method="hide"]
